--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	 <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 	<title>画布</title>
 	<link rel="stylesheet" href="index.css">
 	
 </head>
 <body>
-	<canvas width="1000" height="600"id="canvas1"></canvas>
+	<canvas width="300" height="300"id="canvas1"></canvas>
 </body>
 <script src="index.js"></script>
 </html>
